Added live website links to projects

--- a/projects/project1.html
+++ b/projects/project1.html
@@ -14,6 +14,7 @@
 
   <section>
     <p>Goodland Africa is an e-commerce website built with WordPress and WooCommerce. It specializes in home interior decorations and furniture sales, offering a seamless shopping experience with features like product listings, a shopping cart, and secure payments.</p>
+    <p><strong>Live Website:</strong> <a href="https://goodland.africa" target="_blank">goodland.africa</a></p>
     <a href="../index.html">Back to Portfolio</a>
   </section>
 
