--- a/projects/project2.html
+++ b/projects/project2.html
@@ -13,6 +13,7 @@
 
   <section>
     <p>Life Made Easy is a nonprofit website built with WordPress. It focuses on community development programs, skill development, and health services.</p>
+    <p><strong>Live Website:</strong> <a href="https://lifemadeeasy.kesug.com" target="_blank">lifemadeeasy.kesug.com</a></p>
     <a href="../index.html">Back to Portfolio</a>
   </section>
 
