--- a/projects/project3.html
+++ b/projects/project3.html
@@ -13,6 +13,7 @@
 
   <section>
     <p>Webcreate is a portfolio and services website built with WordPress. It highlights my expertise in web development and showcases my projects.</p>
+    <p><strong>Live Website:</strong> <a href="https://webcreate.kesug.com" target="_blank">webcreate.kesug.com</a></p>
     <a href="../index.html">Back to Portfolio</a>
   </section>
 
