--- a/index.html
+++ b/index.html
@@ -48,6 +48,28 @@
     </div>
   </section>
 
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="project">
+    <h3><a href="projects/project1.html">Project 1: Goodland Africa</a></h3>
+    <img src="images/goodland.jpg" alt="Goodland Africa">
+    <p>An e-commerce website built with WordPress and WooCommerce, specializing in home interior decorations and furniture sales.</p>
+    <p><strong>Live Website:</strong> <a href="https://goodland.africa" target="_blank">goodland.africa</a></p>
+  </div>
+  <div class="project">
+    <h3><a href="projects/project2.html">Project 2: Life Made Easy</a></h3>
+    <img src="images/lifemadeeasy.jpg" alt="Life Made Easy">
+    <p>A nonprofit website built with WordPress, focusing on community development programs, skill development, and health services.</p>
+    <p><strong>Live Website:</strong> <a href="https://lifemadeeasy.kesug.com" target="_blank">lifemadeeasy.kesug.com</a></p>
+  </div>
+  <div class="project">
+    <h3><a href="projects/project3.html">Project 3: Webcreate</a></h3>
+    <img src="images/webcreate.jpg" alt="Webcreate">
+    <p>A portfolio and services website built with WordPress, highlighting web development expertise.</p>
+    <p><strong>Live Website:</strong> <a href="https://webcreate.kesug.com" target="_blank">webcreate.kesug.com</a></p>
+  </div>
+</section>
+
   <section id="contact">
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:anthonyagughasi@gmail.com">anthonyagughasi@gmail.com</a></p>
